[metadata]
author = Dissect Team
author_email = dissect@fox-it.com
url = https://github.com/fox-it/dissect.esedb
license = Apache License 2.0
description = A Dissect module implementing a parser for Microsofts Extensible Storage Engine Database (ESEDB), used for example in Active Directory, Exchange and Windows Update
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, COPYRIGHT
classifiers =
  Programming Language :: Python :: 3

[options]
python_requires = ~=3.9
